--- a/ExamineApp/Views/Pupil/Index.cshtml
+++ b/ExamineApp/Views/Pupil/Index.cshtml
@@ -15,6 +15,8 @@
                 <th>Adı</th>
                 <th>Soyadı</th>
                 <th>Sinifi</th>
+                <th></th>
+                <th></th>
             </tr>
             @foreach (var pupil in Model)
             {
@@ -24,6 +26,14 @@
                     <td>@pupil.Name</td>
                     <td>@pupil.SurName</td>
                     <td>@pupil.ClassNum</td>
+                    <td>
+                        <input value="Yenilə" type="button" class="btn btn-info" onclick="location.href='@Url.Action("Update", "Pupil", new {pupil.Id})'" />
+                    </td>
+                    <td>
+                        <a href="Delete/@pupil.Id" onclick="return confirm('Silmək istədiyinizə əmininizmi?');">
+                            <input type="button" class="btn btn-warning" value="Sil">
+                        </a>
+                    </td>
                 </tr>
             }
         </table>
