fix bug on update

--- a/ExamineApp/Views/Examine/Update.cshtml
+++ b/ExamineApp/Views/Examine/Update.cshtml
@@ -10,6 +10,7 @@
     var allLessons = (List<Lesson>)ViewBag.AllLessons;
     <form action="Registration" method="post">
         <div class="form-row">
+            <input type="hidden" name="Id" value="@Model.Id" />
             <div class="col-md-4 mb-3">
                 <label for="LessonCode">Dərsin kodu</label>
                 <select class="form-select" name="LessonCode">
