--- a/ExamineApp/Views/Pupil/Update.cshtml
+++ b/ExamineApp/Views/Pupil/Update.cshtml
@@ -8,6 +8,7 @@
     var allClasses = (List<Class>)ViewBag.AllClasses;
     <form action="Registration" method="post">
         <div class="form-row">
+            <input type="hidden" name="Id" value="@Model.Id" />
             <div class="col-md-4 mb-3">
                 <label for="Number">Nömrəsi</label>
                 <input type="text" class="form-control" name="Number" value="@Model.Number" required>
